Wrap most balances in unit component which commafys, show total balance in header, fix some bits here and there.

--- a/src/app/components/AccountInfo/style.less
+++ b/src/app/components/AccountInfo/style.less
@@ -19,21 +19,23 @@
 
     &-info {
       &-alias {
+        margin-top: -0.2rem;
         font-size: 1.2rem;
         font-weight: bold;
       }
 
       &-balance {
         font-size: 1rem;
+        margin-bottom: 0.1rem;
       }
 
       &-balances {
         display: flex;
-        font-size: 0.8rem;
+        font-size: 0.7rem;
         opacity: 0.8;
         
         > * {
-          margin-right: 1rem;
+          margin-right: 0.75rem;
 
           &:last-child {
             margin: 0;
