--- a/src/app/components/ChannelList/ChannelRow.less
+++ b/src/app/components/ChannelList/ChannelRow.less
@@ -24,13 +24,20 @@
     &-alias {
       font-weight: 500;
       font-size: 0.95rem;
+      margin-bottom: 0.1rem;
     }
     
     &-pubkey {
       font-size: 0.65rem;
+      margin-bottom: 0.15rem;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+    }
+
+    &-balance {
+      font-size: 0.7rem;
+      opacity: 0.8;
     }
   }
 }
